Fixed background overlay once and for all on mobile

--- a/src/assets/sass/_base.scss
+++ b/src/assets/sass/_base.scss
@@ -29,10 +29,9 @@
 .startpage-bg:before {
     position: fixed;
     content: '';
-    top: 0;
+    height: 100vh;
     left: 0;
     right: 0;
-    bottom: 0;
     background-color: rgba(7, 7, 7, 0.2);
     z-index: 1;
 }
